Fix broken layout from last commit.
Accidentally caused the layout1 page to become misaligned due to a broken main element. The project-content-notice was adjusted to NOT have a fixed size, and the navbar needed more tweaking. Minor changes to text on the project's homepage.

--- a/layout_1/layout1.css
+++ b/layout_1/layout1.css
@@ -9,7 +9,7 @@
 #project-content-notice {
     visibility: hidden;
     position: absolute;
-    width: 700px;
+    max-width: fit-content;
     text-align: center;
 }
 
