--- a/main.css
+++ b/main.css
@@ -171,6 +171,10 @@ main {
 /* SCREEN SIZE-RESPONSIVE MEDIA QUERIES */
 /*--------------------------------------*/
 @media screen and (max-width: 1280px) {
+    #nav {
+        padding: 2em 0;
+    }
+
     #nav-bar {
         flex-direction: column;
     }
@@ -181,5 +185,15 @@ main {
 
     #nav-links-list {
         margin: unset;
+        padding: unset;
+    }
+
+    #main .grid-container {
+        margin: 4em;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 30px 30px;
+        justify-items: center;
+        text-align: center;
     }
 }
